--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "seo:about:check": "node scripts/seo/generate-about-pages.mjs --check",
     "seo:gallery:generate": "node scripts/seo/generate-gallery-pages.mjs",
     "seo:gallery:check": "node scripts/seo/generate-gallery-pages.mjs --check",
+    "seo:defense-calc:generate": "node scripts/seo/generate-defense-calc-pages.mjs",
+    "seo:defense-calc:check": "node scripts/seo/generate-defense-calc-pages.mjs --check",
+    "seo:critical-calc:generate": "node scripts/seo/generate-critical-calc-pages.mjs",
+    "seo:critical-calc:check": "node scripts/seo/generate-critical-calc-pages.mjs --check",
     "seo:article:generate": "node scripts/seo/generate-article-pages.mjs",
     "seo:article:check": "node scripts/seo/generate-article-pages.mjs --check"
   },
