--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "seo:critical-calc:check": "node scripts/seo/generate-critical-calc-pages.mjs --check",
     "seo:material-calc:generate": "node scripts/seo/generate-material-calc-pages.mjs",
     "seo:material-calc:check": "node scripts/seo/generate-material-calc-pages.mjs --check",
+    "seo:pull-calc:generate": "node scripts/seo/generate-pull-calc-pages.mjs",
+    "seo:pull-calc:check": "node scripts/seo/generate-pull-calc-pages.mjs --check",
     "seo:article:generate": "node scripts/seo/generate-article-pages.mjs",
     "seo:article:check": "node scripts/seo/generate-article-pages.mjs --check"
   },
